feat: add publication comments
